Add TitlePane-noborder styles.

--- a/ui-hncb.css
+++ b/ui-hncb.css
@@ -1675,6 +1675,17 @@ c. PrintBtn
 .titled-pane:focused > .title > .arrow-button .arrow {
     -fx-background-color: #333333;
 }
+/*** TitledPane noborder ***/
+.titled-pane.titled-pane-noborder > .title {
+    -fx-background-color: transparent, linear-gradient(to bottom,-fx-base-lighter 0%,-fx-base-dark 100%), linear-gradient(to bottom,-fx-base-lighter 0%,-fx-base-dark 100%);
+    -fx-background-insets: 0;
+    -fx-background-radius: 0;
+    -fx-padding: 2;
+}
+.titled-pane.titled-pane-noborder > *.content {
+    -fx-background-color: transparent, linear-gradient(-fx-base-ultraLight 0, white 50%), linear-gradient(-fx-base-ultraLight 0, white 50%);
+    -fx-background-insets: 0;
+}
 /*** b.Tooltip ***/
 .tooltip {
     -fx-background-color: rgb(215, 215, 215), rgb(255, 255, 255), rgb(255, 253, 177);
