--- a/ui-hncb.css
+++ b/ui-hncb.css
@@ -1593,7 +1593,16 @@ c. PrintBtn
     -fx-font-weight: bolder;
     -fx-text-fill: #000000;
 }
-
+/* Scrollpane wrapper */
+.hn-scrollpaneWrap {}
+.hn-scrollpaneWrap .scroll-bar:vertical .increment-button,
+.hn-scrollpaneWrap .scroll-bar:vertical .decrement-button {
+    -fx-padding: 6 3 6 3;
+}
+.hn-scrollpaneWrap .scroll-bar:horizontal .increment-button,
+.hn-scrollpaneWrap .scroll-bar:horizontal .decrement-button {
+    -fx-padding: 3 6 3 6;
+}
 /*** 14. TabPane ***/
 .tab-pane {
     -fx-background-color: transparent;
