--- a/tablegrid.css
+++ b/tablegrid.css
@@ -81,3 +81,21 @@
     -fx-background-color: #ffddd6;
     -fx-text-fill: red;
 }
+/* TextArea Scroll bar shrink */
+.text-area .scroll-pane .scroll-bar:vertical .increment-button,
+.text-area .scroll-pane .scroll-bar:vertical .decrement-button {
+    -fx-padding: 3 1 3 1;
+ }
+.text-area .scroll-pane .scroll-bar:horizontal .increment-button,
+.text-area .scroll-pane .scroll-bar:horizontal .decrement-button {
+    -fx-padding: 1 3 1 3;
+}
+/* Scrollpane wrapper */
+.hn-scrollpaneWrap {
+}
+.hn-scrollpaneWrap .scroll-pane .scroll-bar:vertical .increment-button,
+.hn-scrollpaneWrap .scroll-pane .scroll-bar:vertical .decrement-button {
+}
+.hn-scrollpaneWrap .scroll-pane .scroll-bar:horizontal .increment-button,
+.hn-scrollpaneWrap .scroll-pane .scroll-bar:horizontal .decrement-button {
+}
