--- a/tablegrid.css
+++ b/tablegrid.css
@@ -85,17 +85,37 @@
 .text-area .scroll-pane .scroll-bar:vertical .increment-button,
 .text-area .scroll-pane .scroll-bar:vertical .decrement-button {
     -fx-padding: 3 1 3 1;
- }
-.text-area .scroll-pane .scroll-bar:horizontal .increment-button,
-.text-area .scroll-pane .scroll-bar:horizontal .decrement-button {
-    -fx-padding: 1 3 1 3;
-}
-/* Scrollpane wrapper */
-.hn-scrollpaneWrap {
 }
 .hn-scrollpaneWrap .scroll-pane .scroll-bar:vertical .increment-button,
 .hn-scrollpaneWrap .scroll-pane .scroll-bar:vertical .decrement-button {
 }
 .hn-scrollpaneWrap .scroll-pane .scroll-bar:horizontal .increment-button,
 .hn-scrollpaneWrap .scroll-pane .scroll-bar:horizontal .decrement-button {
+}
+
+.table-view-scrollhide .scroll-bar:vertical .track {
+    -fx-padding: 0;
+    -fx-background-color: transparent;
+    -fx-border-color: transparent;
+    -fx-background-radius: 0em;
+    -fx-border-radius: 2em;
+}
+.table-view-scrollhide .scroll-bar:vertical .increment-button ,
+.table-view-scrollhide .scroll-bar:vertical .decrement-button {
+    -fx-background-color: transparent;
+    -fx-background-radius: 0;
+    -fx-padding: 0 0 0 0;
+}
+
+.table-view-scrollhide .scroll-bar:vertical .increment-arrow,
+.table-view-scrollhide .scroll-bar:vertical .decrement-arrow {
+    -fx-shape: " ";
+    -fx-padding: 0;
+}
+/* The main scrollbar **thumb** CSS class which we drag every time (movable) */
+.table-view-scrollhide .scroll-bar:vertical .thumb {
+    -fx-background-color: transparent;
+    -fx-background-insets: 0, 0, 0;
+    -fx-background-radius: 0;
+    -fx-padding: 0;
 }
