--- a/ui-hncb.css
+++ b/ui-hncb.css
@@ -2,24 +2,24 @@
 
 /***** Theme Colors *****/
 
-/* Spring  */
 .hn-mainWrap, .hn-windowWrap, .hn-modalWrap, .hn-windowSlideWrap {
-    -fx-base:            rgb(211, 248, 162);
+    /*** Season Themes / ui-themes.css ***/
+    -fx-base:            rgb(255, 241, 243);
 
-    -fx-base-ultraLight: rgb(245, 255, 230);
-    -fx-base-lighter:    rgb(222, 252, 151);
-    -fx-base-light:      rgb(202, 237, 119);
-    -fx-base-dark:       rgb(136, 203,  56);
-    -fx-base-darker:     rgb( 94, 183,   0);
-    -fx-base-ultraDark:  rgb( 57, 174,  58);
+    -fx-base-ultraLight: rgb(255, 247, 244);
+    -fx-base-lighter:    rgb(255, 220, 215);
+    -fx-base-light:      rgb(240, 180, 186);
+    -fx-base-dark:       rgb(236, 125, 125);
+    -fx-base-darker:     rgb(225,  48,  70);
+    -fx-base-ultraDark:  rgb(194,   0,  70);
 
-    -fx-base-sub1:       rgb( 10, 124,  86);
-    -fx-base-sub2:       rgb( 10, 116, 106);
-    -fx-base-sub3:       rgb( 10,  88,  86);
-    -fx-base-sub4:       rgb(221, 255, 224);
+    -fx-base-sub1:       rgb(177,   0,  68);
+    -fx-base-sub2:       rgb(149,   0,  68);
+    -fx-base-sub3:       rgb(121,   0,  45);
+    -fx-base-sub4:       rgb(255, 240, 245);
 
     -fx-base-gradient: linear-gradient(to right, -fx-base-light 5%, -fx-base-lighter 50%, -fx-base-light 95%);
-
+    /*** Season Themes end ***/
 
 /************************************************************************
 + ui-styles.css  (Colors)
@@ -701,14 +701,12 @@
     -fx-border-color:transparent;
     -fx-background-radius: 1,1;
     -fx-background-insets: 0,1;
-
 }
 .scroll-bar:horizontal .track {
     -fx-background-color: linear-gradient(to bottom,#333333 0%,derive(-fx-base,-40%) 30%);
     -fx-border-color:transparent;
     -fx-background-radius: 1,1;
     -fx-background-insets: 0,1;
-
 }
 .scroll-bar:vertical .track-background {
     -fx-background-color: derive(-fx-base, -30%);
