--- a/ui-login-themes.css
+++ b/ui-login-themes.css
@@ -1,36 +1,49 @@
 /***** Login Theme Colors *****/
 
-/* Spring */
+/* Spring
 .hn-loginWrap {
 
-    -fx-base:            #9DF077;
+    -fx-base:            rgb(157, 240, 119);
 
-    -fx-base-ultraLight: #FEFAEB;
-    -fx-base-lighter:    #E8F0CD;
-    -fx-base-light:      #D2E69D;
-    -fx-base-dark:       #58ba0f;
-    -fx-base-darker:     #38950A;
-    -fx-base-ultraDark:  #005105;
-}
+    -fx-base-ultraLight: rgb(242, 250, 235);
+    -fx-base-lighter:    rgb(232, 240, 205);
+    -fx-base-light:      rgb(210, 230, 157);
+    -fx-base-dark:       rgb( 88, 186,  15);
+    -fx-base-darker:     rgb( 56, 149,  10);
+    -fx-base-ultraDark:  rgb(  0,  81,   5); */
 
-/*  Summer  *
+/*  Summer
 
-*/
+    -fx-base:            rgb(136, 232, 255);
 
-/* Fall *
+    -fx-base-ultraLight: rgb(233, 252, 255);
+    -fx-base-lighter:    rgb(205, 248, 255);
+    -fx-base-light:      rgb(180, 245, 255);
+    -fx-base-dark:       rgb(  5, 134, 217);
+    -fx-base-darker:     rgb( 10,  96, 167);
+    -fx-base-ultraDark:  rgb( 10,  63, 114); */
 
-*/
+/* Fall
 
-/* Winter * /
-.hn-loginWrap {
+    -fx-base:            rgb(255, 240,  96);
 
-    -fx-base:            #F7B6C2;
+    -fx-base-ultraLight: rgb(255, 250, 227);
+    -fx-base-lighter:    rgb(252, 247, 198);
+    -fx-base-light:      rgb(255, 250, 193);
+    -fx-base-dark:       rgb(255, 232, 106);
+    -fx-base-darker:     rgb(255, 177, 40);
+    -fx-base-ultraDark:  rgb(198, 124, 9); */
 
-    -fx-base-ultraLight: #FEFAEB;
-    -fx-base-lighter:    #F7E1CD;
-    -fx-base-light:      #F7B6C2;
-    -fx-base-dark:       #FA90B1;
-    -fx-base-darker:     #C52D77;
-    -fx-base-ultraDark:  #72004E;
-}
+/* Winter
+
+    -fx-base:            rgb(252, 177, 169);
+
+    -fx-base-ultraLight: rgb(252, 240, 237);
+    -fx-base-lighter:    rgb(252, 230, 225);
+    -fx-base-light:      rgb(255, 218, 212);
+    -fx-base-dark:       rgb(255, 131, 134);
+    -fx-base-darker:     rgb(225, 101, 116);
+    -fx-base-ultraDark:  rgb(164,  58,  86);
+} */
+
 
