--- a/Backup/ui-themes.css
+++ b/Backup/ui-themes.css
@@ -35,8 +35,7 @@
     -fx-base-sub3:       rgb( 10,  63, 114);
     -fx-base-sub4:       rgb(207, 255, 245);
 
-    -fx-base-gradient: linear-gradient(to right, -fx-base-midDark 0%, -fx-base-mid 10%, -fx-base-midLight 50%, -fx-base-mid 90%, -fx-base-midDark 100%);
-}
+    -fx-base-gradient: linear-gradient(to right, -fx-base-light 5%, -fx-base-lighter 50%, -fx-base-light 95%);
 */
 
 /* Fall *
@@ -55,7 +54,7 @@
     -fx-base-sub3:       rgb(106,  68,   0);
     -fx-base-sub4:       rgb(252, 255, 224);
 
-    -fx-base-gradient: linear-gradient(to right, -fx-base-midDark 0%, -fx-base-mid 10%, -fx-base-midLight 50%, -fx-base-mid 90%, -fx-base-midDark 100%);
+    -fx-base-gradient: linear-gradient(to right, -fx-base-light 5%, -fx-base-lighter 50%, -fx-base-light 95%);
 }
 */
 
@@ -75,6 +74,7 @@
     -fx-base-sub3:       rgb(121,   0,  45);
     -fx-base-sub4:       rgb(255, 240, 245);
 
-    -fx-base-gradient: linear-gradient(to right, -fx-base-midDark 0%, -fx-base-mid 10%, -fx-base-midLight 50%, -fx-base-mid 90%, -fx-base-midDark 100%);
-}        */
+    -fx-base-gradient: linear-gradient(to right, -fx-base-light 5%, -fx-base-lighter 50%, -fx-base-light 95%);
+}
+*/
 
