--- a/ui-login.css
+++ b/ui-login.css
@@ -11,7 +11,8 @@
     -fx-base-ultraDark:  rgb(  0,  81,   5);
     /*** Season Themes end ***/
 
-    -fx-font-family: "Microsoft JhengHei", monospace, sans-serif;
+    /*-fx-font-family: "Microsoft JhengHei", monospace, sans-serif;  */
+    -fx-font-family: "PMingLiU", monospace, sans-serif;
     -fx-font-size: 18;
 
     -fx-gray-light:      #7c7c7c;
@@ -173,6 +174,9 @@
     -fx-background-color: transparent, #999999, linear-gradient( white 0%, white 100%), -fx-box-disabled-gradient;
     -fx-background-radius: 3;
 }
+.hn-login-panel .password-field {
+    -fx-font-family: "Microsoft JhengHei", monospace, sans-serif;
+}
 .hn-login-panel .password-field.caps:focused {
     -fx-background-image: url("../images/pwd_caps_bkg.png");
     -fx-background-repeat: no-repeat;
@@ -202,6 +206,7 @@
     -fx-background-radius: 3;
     -fx-text-fill: white;
     -fx-effect: dropshadow(one-pass-box, derive(-fx-gray-dark, -30%), 1, 1.0, 0, 2);
+    -fx-padding: 5;
 }
 .hn-login-Btn:focused {
     -fx-background-color: white, rgba(255,255,255,0), linear-gradient(to bottom, derive(-fx-gray-dark, -20%) 0%, -fx-gray-dark 100%), linear-gradient(to bottom, derive(-fx-gray-light, 10%) 0%, -fx-gray-dark 100%);
