--- a/stage-style.css
+++ b/stage-style.css
@@ -17,14 +17,14 @@
 .hn-stageTab .hn-stage-tab-on {
     -fx-background-image: url("../images/stageTab_on.png");
 }
-
+/* Left Menu */
 .hn-stageTab .hn-leftMenu {
     -fx-background-color: linear-gradient(to right, rgba(100,100,100,0.2) 90%, rgba(50,50,50,0.5) 100%);
     -fx-font-family: MingLiU, monospace;
     -fx-font-size: 15;
-    -fx-menu-disabled: gray;
-    -fx-menu-finished: greenyellow;
-    -fx-menu-todo: orange;
+    -fx-menu-disabled: #808080; /*gray*/
+    -fx-menu-finished: #adff2f; /*greenyellow*/
+    -fx-menu-todo: #ffa500 /*orange*/;
 }
 .hn-stageTab  .hn-leftMenu .label {
     -fx-text-fill: white;
@@ -57,7 +57,7 @@
     -fx-background-position: right top;
 }
 .hn-stageTab .hn-menu-finished .label {
-    -fx-text-fill: -fx-menu-finished;
+    -fx-text-fill: #adff2f;
 }
 .hn-stageTab .hn-menu-disabled {
     -fx-background-color: #cccccc;
@@ -71,7 +71,7 @@
     -fx-background-position: right top;
 }
 .hn-stageTab .hn-menu-todo .label {
-    -fx-text-fill: -fx-menu-todo;
+    -fx-text-fill: #ffa500;
 }
 
 /*** Tabpane inside StageTabs ***/
