--- a/ui-hncb.css
+++ b/ui-hncb.css
@@ -1276,7 +1276,7 @@ c. PrintBtn
     -fx-focus-traversable: false;
 }
 .table-view .placeholder .label {
-    -fx-text-fill: null; /* Hide warnng text when data is empty */
+    -fx-text-fill: null; /* Hide warning text when data is empty */
 }
 .list-view .list-cell {
     -fx-background-color: #ffffff;
@@ -1291,7 +1291,7 @@ c. PrintBtn
 }
 .list-view .list-cell:selected {
     -fx-background-color: #c0ecfb;
-    -fx-border-color: #5bb0d6;
+    -fx-border-color: #aaaaaa;
     -fx-text-fill: black;
 }
 .list-view .list-cell:focused {
@@ -1367,7 +1367,6 @@ c. PrintBtn
     -fx-font-weight: bold;
 }
 /*** 07. Button ***/
-
 .button {
     -fx-background-color: rgb(99,99,99), linear-gradient(to bottom,rgb(255,255,255) 0%,rgb(190,190,190) 75%,rgb(230,230,230) 100%);
     -fx-background-insets: 0,1,1,2;
@@ -1817,4 +1816,39 @@ c. PrintBtn
 .printBtn .label {
     -fx-text-fill: white;
     -fx-translate-y: 1;
+}
+
+/************************************************************************
++ ui-misc
+************************************************************************/
+/** Guide Menu
+01. GuideMenu
+*******************/
+.hn-guideMenu {
+    -fx-font-size: 15;
+    -fx-text-fill: black;
+    -fx-font-weight: bold;
+}
+.hn-guideMenu-group {
+    -fx-border-width: 0 0 2 0;
+    -fx-border-color: #dddddd;
+    -fx-padding: 5 0 10 0;
+}
+.hn-guideMenu-group-header {
+    -fx-text-fill: #ff1d25;
+    -fx-font-size: 18;
+    -fx-font-weight: bold;
+    -fx-translate-x: 1;
+    -fx-translate-y: 3;
+}
+.hn-guideMenu-group .label {
+    -fx-padding: 2 0 2 8;
+}
+.hn-guideMenu-group .label:hover {
+    -fx-text-fill: #002ca9;
+    -fx-cursor: hand;
+    -fx-translate-x: 1;
+}
+.hn-guideMenu-group-header.label:hover {
+    -fx-text-fill: #ff0011;
 }
